<resources>
    <string name="app_name">SlidingMenu</string>

    <string name="home">首页</string>
    <string name="find">发现</string>
    <string name="keep">关注</string>
    <string name="collect">收藏</string>
    <string name="draft">草稿</string>
    <string name="search">搜索</string>
    <string name="quiz">提问</string>
    <string name="set">设置</string>
    <string name="username">小猪佩奇</string>
</resources>
